crates/forge/tests/e2e/snapshots/backtrace/main__e2e__backtrace__snap_test_backtrace_panic@2.19.6.snap
---
source: crates/forge/tests/e2e/backtrace.rs
expression: stdout
---


[FAIL] backtrace_panic::Test::test_contract_panics

Failure data:
    (0x417373657274206661696c6564 ('Assert failed'), 0x454e545259504f494e545f4641494c4544 ('ENTRYPOINT_FAILED'), 0x454e545259504f494e545f4641494c4544 ('ENTRYPOINT_FAILED'))

stack backtrace:
   in contract 'InnerContract':
      0: core::panic_with_const_felt252
         at [..]lib.cairo:360:5
      1: core::panic_with_const_felt252
         at [..]lib.cairo:360:5
      2: backtrace_panic::InnerContract::__wrapper__InnerContract__inner
         at [..]lib.cairo:32:5

   in contract 'OuterContract':
      0: backtrace_panic::OuterContract::__wrapper__OuterContract__outer
         at [..]lib.cairo:13:5

   in test 'backtrace_panic::Test::test_contract_panics':
      0: (inlined) backtrace_panic::IOuterContractDispatcherImpl::outer
         at [..]lib.cairo:1:1
      1: backtrace_panic::Test::test_contract_panics
         at [..]lib.cairo:59:9
      2: backtrace_panic::Test::test_contract_panics__snforge_internal_test_generated
         at [..]lib.cairo:50:5

[IGNORE] backtrace_panic::Test::test_contract_panics_with_should_panic
[FAIL] backtrace_panic::Test::test_fork_contract_panics

Failure data:
    (0x417373657274206661696c6564 ('Assert failed'), 0x454e545259504f494e545f4641494c4544 ('ENTRYPOINT_FAILED'), 0x454e545259504f494e545f4641494c4544 ('ENTRYPOINT_FAILED'))

stack backtrace:
   in forked contract with class hash: 0x554cb276fb5eb0788344f5431b9a166e2f445d8a91c7aef79d8c77e7eede956
   note: backtrace is not available for forked contracts

   in contract 'OuterContract':
      0: backtrace_panic::OuterContract::__wrapper__OuterContract__outer
         at [..]lib.cairo:13:5

   in test 'backtrace_panic::Test::test_fork_contract_panics':
      0: (inlined) backtrace_panic::IOuterContractDispatcherImpl::outer
         at [..]lib.cairo:1:1
      1: backtrace_panic::Test::test_fork_contract_panics
         at [..]lib.cairo:90:9
      2: backtrace_panic::Test::test_fork_contract_panics__snforge_internal_test_generated
         at [..]lib.cairo:76:5


Failures:
    backtrace_panic::Test::test_contract_panics
    backtrace_panic::Test::test_fork_contract_panics
